[gd_scene load_steps=17 format=3 uid="uid://cf8vxgwibhecj"]

[ext_resource type="Script" uid="uid://cwspeolie4bw" path="res://Scripts/control.gd" id="1_jjgbg"]
[ext_resource type="Shader" uid="uid://wutyuh5dw3hw" path="res://Shaders/Crt_monitor.gdshader" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://dbap0gqox0ty1" path="res://addons/markdownlabel/markdownlabel.gd" id="2_ynf5e"]
[ext_resource type="Script" uid="uid://dcx7crs23nf4" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="3_hptm8"]
[ext_resource type="Script" uid="uid://d0sin64i4v3op" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="4_d1ilt"]
[ext_resource type="Script" uid="uid://dlok0dv1tq2bf" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="5_6iyac"]
[ext_resource type="Script" uid="uid://bayuh2vafablg" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="6_fdnlq"]
[ext_resource type="Script" uid="uid://dfr1w7u3jgni3" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="7_jkdf5"]
[ext_resource type="Script" uid="uid://bsi6dexoofpe6" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="8_wsu2k"]

[sub_resource type="Resource" id="Resource_k12tt"]
resource_local_to_scene = true
script = ExtResource("3_hptm8")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_h1bgf"]
resource_local_to_scene = true
script = ExtResource("4_d1ilt")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_b3802"]
resource_local_to_scene = true
script = ExtResource("5_6iyac")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_fevyy"]
resource_local_to_scene = true
script = ExtResource("6_fdnlq")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_hibaj"]
resource_local_to_scene = true
script = ExtResource("7_jkdf5")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_pdsj5"]
resource_local_to_scene = true
script = ExtResource("8_wsu2k")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8gbba"]
shader = ExtResource("2_bo1nx")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.129
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.173
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 40.0
shader_parameter/roll_variation = 0.305
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.215
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.00399995
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.025
shader_parameter/clip_warp = true
shader_parameter/vignette_intensity = 0.105
shader_parameter/vignette_opacity = 0.229

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jjgbg")

[node name="BG" type="Panel" parent="Main"]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Main/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="File" type="PopupMenu" parent="Main/MarginContainer/VBoxContainer/MarginContainer/MenuBar"]
unique_name_in_owner = true
size = Vector2i(136, 100)
prefer_native_menu = true
item_count = 2
item_0/text = "New Note"
item_0/id = 0
item_1/text = "New Notebook"
item_1/id = 1

[node name="Edit" type="PopupMenu" parent="Main/MarginContainer/VBoxContainer/MarginContainer/MenuBar"]
unique_name_in_owner = true
prefer_native_menu = true

[node name="View" type="PopupMenu" parent="Main/MarginContainer/VBoxContainer/MarginContainer/MenuBar"]
unique_name_in_owner = true
size = Vector2i(265, 286)
hide_on_item_selection = false
hide_on_checkable_item_selection = false
prefer_native_menu = true
item_count = 12
item_0/text = "Toggle TV Overlay"
item_0/checkable = 1
item_0/id = 11
item_1/text = "Toggle Side Bar"
item_1/checkable = 1
item_1/checked = true
item_1/id = 0
item_2/text = "Toggle Menu Bar"
item_2/checkable = 1
item_2/checked = true
item_2/id = 1
item_3/text = "Toggle Markdown Renderer"
item_3/checkable = 1
item_3/checked = true
item_3/id = 10
item_4/id = 2
item_4/separator = true
item_5/text = "Toggle Line Numbers"
item_5/checkable = 1
item_5/checked = true
item_5/id = 6
item_6/text = "Toggle Highlight Current Line"
item_6/checkable = 1
item_6/checked = true
item_6/id = 5
item_7/text = "Toggle Word Wrap"
item_7/checkable = 1
item_7/checked = true
item_7/id = 8
item_8/text = "Toggle Minimap"
item_8/checkable = 1
item_8/checked = true
item_8/id = 9
item_9/id = 7
item_9/separator = true
item_10/text = "Zoom In"
item_10/id = 3
item_11/text = "Zoom out"
item_11/id = 4

[node name="About" type="PopupMenu" parent="Main/MarginContainer/VBoxContainer/MarginContainer/MenuBar"]
unique_name_in_owner = true
auto_translate_mode = 1
prefer_native_menu = true
item_count = 1
item_0/text = "About The Project"
item_0/id = 0

[node name="PanelContainer" type="PanelContainer" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="Main/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SidebarContainer" type="PanelContainer" parent="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Tree" type="Tree" parent="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/SidebarContainer"]
unique_name_in_owner = true
layout_mode = 2
hide_root = true

[node name="HSplitContainer2" type="HSplitContainer" parent="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer"]
layout_mode = 2

[node name="EditorContainer" type="TabContainer" parent="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/HSplitContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0

[node name="CodeEdit" type="CodeEdit" parent="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/HSplitContainer2/EditorContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "# THIS IS HEADER TEXT
this is a note taking app:
- this is some list item
- this is another item
- this is item number 3
[this is a website link to youtube](youtube.com)

## BOTTOM TEXT"
placeholder_text = "type your notes here c:"
wrap_mode = 1
scroll_smooth = true
minimap_draw = true
caret_blink = true
caret_blink_interval = 0.4
caret_multiple = false
highlight_current_line = true
draw_tabs = true
gutters_draw_bookmarks = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
metadata/_tab_index = 0

[node name="RendererContainer" type="PanelContainer" parent="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/HSplitContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="NoteRenderer" type="RichTextLabel" parent="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/HSplitContainer2/RendererContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
selection_enabled = true
drag_and_drop_selection_enabled = false
script = ExtResource("2_ynf5e")
h1 = SubResource("Resource_k12tt")
h2 = SubResource("Resource_h1bgf")
h3 = SubResource("Resource_b3802")
h4 = SubResource("Resource_fevyy")
h5 = SubResource("Resource_hibaj")
h6 = SubResource("Resource_pdsj5")
metadata/_custom_type_script = "uid://dbap0gqox0ty1"

[node name="ShaderOverlay" type="ColorRect" parent="Main"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_8gbba")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NoteRendererTimer" type="Timer" parent="Main"]
unique_name_in_owner = true
wait_time = 0.2
autostart = true

[connection signal="index_pressed" from="Main/MarginContainer/VBoxContainer/MarginContainer/MenuBar/View" to="Main" method="_on_view_index_pressed"]
[connection signal="column_title_clicked" from="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/SidebarContainer/Tree" to="Main" method="_on_tree_column_title_clicked"]
[connection signal="item_edited" from="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/SidebarContainer/Tree" to="Main" method="_on_tree_item_edited"]
[connection signal="text_changed" from="Main/MarginContainer/VBoxContainer/PanelContainer/HSplitContainer/HSplitContainer2/EditorContainer/CodeEdit" to="Main" method="_on_code_edit_text_changed"]
